<resources>
    <string name="app_name">FX App</string>
    
    <!-- Screen Titles -->
    <string name="converter_screen_title">Converter</string>
    <string name="history_screen_title">History</string>

    <!-- Converter screen -->
    <string name="converter_amount_input_label">Amount</string>
    <string name="converter_button_label">Get current rate</string>
    <string name="base_currency_dropdown_label">From</string>
    <string name="to_currency_dropdown_label">To</string>
    <string name="converter_screen_heading">Get the current FX Rate</string>
    <string name="error_base_currency_required">Base currency required</string>
    <string name="error_to_currency_required">Conversion currency required</string>
    <string name="error_currencies_match">Both currencies need to be different</string>
    <string name="conversion_response">1%1$s = %2$s%3$f</string>
    <string name="conversion_response_attribution">Data provided by FXMarket API</string>

    <!-- Graph screen -->
    <string name="eurusd_graph_heading">EUR/USD, past 30 days</string>
    <string name="gbpusd_graph_heading">GBP/USD, past 30 days</string>
    <string name="usdjpy_graph_heading">USD/JPY, past 30 days</string>
    <string name="history_paging_heading">All currencies, past 30 days</string>

    <!-- Messages -->
    <string name="loading_general">Loading…</string>
    <string name="load_state_retry_button">Retry</string>
    <string name="load_state_error_default">There was an error loading the results: %1$s</string>

    <!-- Bottom navigation -->
    <string name="bottom_navigation_converter_title">Converter</string>
    <string name="bottom_navigation_history_title">History</string>
    <string name="graph_vertical_axis_title">Amount</string>
    <string name="graph_horizontal_axis_title">Past 30 days</string>
</resources>